--- a/views/md.ejs
+++ b/views/md.ejs
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title><%- title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/bootstrap.css' />
     <link rel='stylesheet' href='/stylesheets/prettify.css' />
+    <link rel='stylesheet' href='/stylesheets/style.css' />
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -16,9 +16,22 @@
     <script src="/javascripts/application.js"></script>
   </head>
   <body>
-    <header>
-        <a href="../">../</a>
-    </header>
-    <%- html %>
+
+<div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="../">../</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <%- html %>
+        </div>
+    </div>
   </body>
 </html>
