handling large files

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -10,3 +10,11 @@ img {
 pre {
     margin-left: 30px;
 }
+
+.table td span {
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 700px;
+}
