--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,3 +8,10 @@ img {
 pre {
   margin-left: 30px;
 }
+.table td span {
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 700px;
+}
