--- a/views/directory.ejs
+++ b/views/directory.ejs
@@ -91,8 +91,8 @@
             <tbody>
             <% files.forEach(function (file) { %>
                 <tr>
-                    <td><a href="<%= file[0] %>"><%= file[1] %></a><%= file[2].isDirectory() ? '/' : '' %></td>
-                    <td align="right" style="text-align: right">
+                    <td class="filename"><span><a href="<%= file[0] %>"><%= file[1] %></a><%= file[2].isDirectory() ? '/' : '' %></span></td>
+                    <td>
                         <%= strftime('%Y-%m-%d(%a) %H:%M', file[2].mtime) %>
                     </td>
                 </tr>
