--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -16,5 +16,8 @@ pre {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 700px;
+    width: 600px;
+}
+.table td.size {
+    text-align: right;
 }
