--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,5 +13,8 @@ pre {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 700px;
+  width: 600px;
+}
+.table td.size {
+  text-align: right;
 }
