--- a/views/img.ejs
+++ b/views/img.ejs
@@ -31,7 +31,7 @@
             </ul>
         </div>
         <div class="row">
-            <pre><img src="<%= path %>?raw=1" alt="image"></pre>
+            <img src="<%= path %>?raw=1" alt="image">
         </div>
     </div>
   </body>
