added link to raw image file

--- a/views/img.ejs
+++ b/views/img.ejs
@@ -31,7 +31,7 @@
             </ul>
         </div>
         <div class="row">
-            <img src="<%= path %>?raw=1" alt="image">
+            <a href="<%= path %>?raw=1"><img src="<%= path %>?raw=1" alt="image"></a>
         </div>
     </div>
   </body>
